semestar-1/CC/v9/Primer/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: tasks-server.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tasks-service
                port:
                  number: 8000
